--- a/style.css
+++ b/style.css
@@ -1,49 +1,80 @@
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+
 /* ----- Font ----- */
-.poppins-medium {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.poppins-semibold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.poppins-bold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.poppins-extrabold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 800;
-  font-style: normal;
-}
-
 
 /* ----- Share Font Size and Font color ----- */
 
-
-
-
-
-
+.font-16-dark-3-semibold {
+  font-size: 1rem;
+  color: rgba(58, 58, 58, 1);
+  font-weight: 600;
+}
+.font-24-bold {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.share-color {
+  color: rgba(58, 58, 58, 1);
+}
 
 /* ----- Header ----- */
 
+/* --- NavBar --- */
+.nav-container {
+  margin-top: 95px;
+  margin-left: 120px;
+  margin-right: 120px;
+  margin-bottom: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+.nav-item ul {
+  display: flex;
+  list-style: none;
+  gap: 34px;
+}
 
-
-
-
+/* --- Banner --- */
+.banner-title {
+  font-size: 3.25rem;
+  color: rgba(58, 58, 58, 1);
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+.banner-btn {
+  color: rgba(255, 255, 255, 1);
+  font-size: 1rem;
+  background-color: rgba(224, 44, 109, 1);
+  padding: 10px 24px;
+  border: none;
+  border-radius: 30px;
+  margin-top: 16px;
+}
+.banner-container {
+  max-width: 582px;
+  max-height: 270px;
+  margin-top: 100px;
+}
+.banner-bg {
+  background-image: url(./images/Circle\ design.svg);
+  background-repeat: no-repeat;
+  padding-bottom: 55px;
+  padding-right: 35px;
+}
+.banner-pic {
+  padding-top: 30px;
+}
+.banner {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 120px;
+  padding-right: 120px;
+}
 
 /* ----- Main ----- */
-
-
-
-
-
 
 /* ----- Footer ---- */
